// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EthVaultFactory predicts vault addresses 1`] = `4877`;

exports[`EthVaultFactory predicts vault addresses 2`] = `4865`;

exports[`EthVaultFactory private vault deployment gas 1`] = `
Object {
  "calldataByteLength": 612,
  "gasUsed": 575829,
}
`;

exports[`EthVaultFactory public vault deployment gas 1`] = `
Object {
  "calldataByteLength": 612,
  "gasUsed": 551833,
}
`;
